--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-hooks-paginator": "^0.5.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-tabs": "^3.2.3",
