--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "js-cookie": "^3.0.1",
     "latest": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.1.1",
